Material UI palette works as intended

--- a/src/ui.html
+++ b/src/ui.html
@@ -29,6 +29,16 @@
     />
   </div>
 
+  <div class="input-wrapper">
+    <label>Schema:</label>
+
+    <select name="schema" id="schema">
+      <option value="material">Material</option>
+      <option value="monochrome">Monochrome</option>
+      <option value="trueMonochrome">True Monochrome</option>
+    </select>
+  </div>
+
   <div>
     <button type="button" id="create">Create</button>
 
