[ui] Updated text in ui

--- a/src/ui.html
+++ b/src/ui.html
@@ -2,10 +2,22 @@
 
 <div class="outer-wrapper">
   <div class="info-text">
-    <p>
-      Pick a basecolor to generate a monochromatic-like palette similar to
-      Material UI.
-    </p>
+    <h3>Material palette</h3>
+
+    <ol>
+      <li>
+        Give your palette a name!
+      </li>
+
+      <li>
+        Select a color to act as the base for your palette!
+      </li>
+
+      <li>
+        Choose either the Material Design schema for your palette or a
+        monochromatic one!
+      </li>
+    </ol>
   </div>
 
   <div class="input-wrapper">
