Add checkbox to allow users to choose between text input or colorpicker

--- a/src/ui.html
+++ b/src/ui.html
@@ -31,12 +31,20 @@
   </div>
 
   <div class="input-wrapper">
+    <label class="switch">
+      Toggle color picker
+    </label>
+
+    <input class="color-toggle" id="color-toggle" type="checkbox" />
+  </div>
+
+  <div class="input-wrapper">
     <label>Base color:</label>
     <input
       class="color-input"
       label="Color"
       value="#F0463C"
-      type="color"
+      type="text"
       id="color"
     />
   </div>
