[ui] initial convertion to react

--- a/src/ui.html
+++ b/src/ui.html
@@ -1,68 +1,1 @@
-<h2>Material Palette</h2>
-
-<div class="outer-wrapper">
-  <div class="info-text">
-    <h3>Material palette</h3>
-
-    <ol>
-      <li>
-        Give your palette a name!
-      </li>
-
-      <li>
-        Select a color to act as the base for your palette!
-      </li>
-
-      <li>
-        Choose either the Material Design schema for your palette or a
-        monochromatic one!
-      </li>
-    </ol>
-  </div>
-
-  <div class="input-wrapper">
-    <label>Palette name:</label>
-    <input
-      label="Palette name"
-      placeholder="Palette name"
-      type="text"
-      id="paletteName"
-    />
-  </div>
-
-  <div class="input-wrapper toggle-wrapper">
-    <input class="color-toggle" id="color-toggle" type="checkbox" />
-
-    <label class="switch">
-      Toggle color picker
-    </label>
-  </div>
-
-  <div class="input-wrapper">
-    <label>Base color:</label>
-    <input
-      class="color-input"
-      label="Color"
-      value="#F0463C"
-      type="text"
-      id="color"
-    />
-  </div>
-
-  <div class="input-wrapper">
-    <label>Schema:</label>
-
-    <select name="schema" id="schema">
-      <option value="material">Material</option>
-      <option value="monochrome">Monochrome</option>
-      <option value="trueMonochrome">True Monochrome</option>
-    </select>
-  </div>
-
-  <p id="error-msg" style="color: darkred"></p>
-  <div>
-    <button type="button" id="create">Create</button>
-
-    <button type="button" id="cancel">Cancel</button>
-  </div>
-</div>
+<div id="react-page"></div>
