build(ui.html): explicitly inlines react code

--- a/src/ui.html
+++ b/src/ui.html
@@ -1,1 +1,14 @@
-<div style="height: 100%" id="react-page"></div>
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Material palette</title>
+
+    <script type="text/javascript">
+      <%= inlineJS %>
+    </script>
+  </head>
+  <body>
+    <div style="height: 100%" id="react-page"></div>
+  </body>
+</html>
